--- a/src/assets/css/componets_css/climate.css
+++ b/src/assets/css/componets_css/climate.css
@@ -14,12 +14,13 @@
     align-items: center;
     justify-content: center;
     
+    
 }
 
 
     .thermostat{
         overflow: hidden;
-        background: rgb(70, 70, 70, .65);
+        background: rgba(70, 70, 70);
         backdrop-filter: blur(25px);
         height: 100%;
         width: 100%;
@@ -27,6 +28,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+        box-shadow: 5px 5px 10px rgb(80, 79, 79);
     }
 
 
@@ -39,6 +42,8 @@
         align-items: center;
 
         z-index: 10;
+        backdrop-filter: blur(1px);
+
     }
         .thermostat_value p{
             color: white;
@@ -48,6 +53,7 @@
         }
 
         .circles{
+            
             grid-column: 3/5;
             grid-row:    2/4;
             z-index: 1;
@@ -99,6 +105,8 @@
 
 
     .thermostat_controls{
+        backdrop-filter: blur(1px);
+
         border-top: 1px solid rgb(255, 255, 255);
         border-bottom: 1px solid rgb(255, 255, 255);
         grid-row: 5/6;
@@ -112,6 +120,7 @@
 
 
         .setpoint_container, .thermostat_mode_container{
+            
             display: flex;
             justify-content: center;
             align-items: center;
@@ -157,6 +166,7 @@
 
 
         .thermostat_setpoint{
+            
             height: 100%;
             width: 100%;
             display: flex;
@@ -189,6 +199,8 @@
 
 
     .thermostat_controls_two{
+        backdrop-filter: blur(1px);
+
         grid-row: 6/7;
         grid-column: 1/7;
         display: flex;
@@ -356,7 +368,7 @@
                             #mode_auto{
                                 grid-row: 2;
                                 grid-column: 3/4;
-                                 background: rgb(70, 70, 70);
+                                background: rgb(70, 70, 70);
                                 border-radius: 5px;
                                 border: none;
                                 width: 100%;
@@ -546,113 +558,7 @@
 
 
 
-@media screen and (width: 1024px)    {
-    .climate_modal_open{
-        width: 65%;
-        bottom: 155px;
-        
-    }
-    .climate_modal_exit{
-        width: 65%;
-        bottom: 155px;
-    }
-}
 
-@media screen and (width: 1024px)    {
-    .climate_modal_open{
-        width: 65%;
-        bottom: 155px;
-    }
-    .climate_modal_exit{
-        width: 65%;
-        bottom: 155px;
-    }
-}
-
-
-@media screen and (max-width: 699px)    {
-    .climate_page{
-        width: 100%;
-        height: 100%;
-    }
-    
-    .climate_modal_open{
-        width: 76%;
-        bottom: 145px;
-    }
-    .climate_modal_exit{
-        width: 75%;
-        bottom: 160px;
-    }
-    .circles{
-        width: 100%;
-        height: 100%;
-        grid-column: 2/6;
-        grid-row:    2/4;
-        z-index: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .inner_circle{
-        position: relative;
-        left: 5px;
-        top: 5px;
-        height: 170px;
-        width: 170px;
-         background: rgb(70, 70, 70);
-        border-radius: 50%;
-    }
-
-    
-    .outter_circle{
-        height: 180px;
-        width: 180px;
-        background: linear-gradient(90deg, rgb(23,158,202) 0%, rgb(192,50,50) 100%);
-        border-radius: 50%;
-    }
-
-   
-    
-}              
-
-@media only screen and (min-height: 1050px) and (orientation: portrait){
-    .climate_modal_open{
-     
-        bottom: 330px;
-    }
-    .climate_modal_exit{
-       
-        bottom: 330px;
-    }
-}
-                   
-    
-
-                    
-@media screen and (max-height: 450px) and (orientation: landscape){
-
-    .homeContainer{
-        display: none;
-    }
-    .theaterSliderContainer{
-        display: none;
-    }
-
-    .climate_page{
-        display: none;
-    }
-
-    .warningMessage{
-        display: block;
-        background-color: rgb(220, 49, 49);
-        padding: 20px;
-        border-radius:5px;
-
-    }
-
-   
-}
 
 
 .exit_container{
@@ -704,10 +610,12 @@
 
     .container_thermo .thermostat{
         grid-template-rows: repeat(4,1fr);
+
     }
 
      .container_thermo .thermostat_value{
         grid-row: 1/3;
+        
     }
 
     .container_thermo .circles{
@@ -729,10 +637,12 @@
 
     .container_thermo .thermostat_controls{
         grid-row: 3;
+
     }
 
     .container_thermo .thermostat_controls_two{
         grid-row: 4;
+
     }
     .container_thermo .climate_modal_open{
         grid-row: 1/5;
@@ -763,12 +673,12 @@
         border-radius: 50px;
         border: none;
         outline: none;
-        background-color: rgba(202, 79, 79, 0.35);
+        background-color: rgba(202, 79, 79, 0.55);
         box-shadow: rgba(0, 0, 0, 0.377) -5px 5px 8px;
         cursor: pointer;
         font-family: Montserrat;
         transition: 0.1s ease-in-out;
-
+        z-index: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -803,3 +713,5 @@
         box-shadow: inset 5px 5px 10px rgb(70, 70, 70);
     }
    
+
+    
