--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -1,6 +1,4 @@
-.transport_button{
-    
-}
+
 
 .transport_button .back_button_image{
     filter: none;
@@ -457,11 +455,30 @@
 
 
 
-    @media screen and (max-width: 430px) and (max-height: 837px) {
+    @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
         .audio_dashboard{
             grid-template-rows:repeat(9,1fr)
 
         }
+
+        .mobile_back_btn{
+            grid-column: 1/3;
+            grid-row: 1;
+            width: 100%;
+            height: 100%;
+         }
+           .audio_dashboard .mobile_back_btn .back_button{
+                bottom: 0px;
+                top: 1rem;
+                width: 65%;
+                height: 35%;
+                left: 15px;
+            }
+
+           .audio_dashboard .home_button {
+            width: 65%;
+            height: 35%;
+           }
 
         .background_image img{
    
@@ -581,9 +598,7 @@
                 border-bottom-right-radius: 0%;
                 border-bottom-left-radius: 0%;
             }
-            .image_title{
-             
-            }
+          
                 .browser_card_title{
                     height: 100%;
                     font-size: 1rem;
