--- a/src/assets/css/dashboard_css/Climate_Dashboard.css
+++ b/src/assets/css/dashboard_css/Climate_Dashboard.css
@@ -51,26 +51,18 @@
         grid-row: 2/9;
         width: 100%;
         height: 100%;
-
         display: flex;
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-       
-   
         gap: 1rem;
         backdrop-filter: blur(10px);
-
         animation: controller-load 1500ms;
-      
-       
     }
         .container_thermo{    
            height: 20rem;
            width: 22rem;
-        
         }
-
             .climate_label{
                 position: absolute;
                 z-index: 9;
@@ -92,4 +84,48 @@
         grid-row: 1/2;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+    }
+
+
+
+
+
+
+
+
+
+    @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+       
+        .climate_page .nav_container{
+            display: none;
+        }
+
+        .climate_page .title_info{
+            font-size: 2rem;
+        }
+        
+        .climate_dashboard_container{
+            overflow-y: scroll;
+        }
+
+        .climate_dashboard_container{
+            backdrop-filter: blur(0px);
+        }
+    
+
+        .climate_page .title_info{
+            font-size: 1.5rem;
+            grid-column: 2/12;
+            bottom: 0;
+            position: relative;
+            bottom: 1.25rem;
+            font-weight: 100;
+        
+        }
+     
+    
+    
+    
+    
+    
     }
