--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -1,167 +1,92 @@
 
 .light_dashboard{
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.chervon_left{
-    transform: rotate(270deg);
-}   
-.chervon_right{
-    transform: rotate(90deg);
-}
-.map_list_container{
-    grid-row: 1/9;
-    grid-column:1/9;
-
     height: 100%;
     width: 100%;
-    z-index: 0;
-
-    background-color: transparent;
 
     display: grid;
-    grid-template-columns: repeat(10,1fr);
-    grid-template-rows: repeat(10,1fr);
-
-    justify-items: center;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    justify-items: start;
     align-items: center;
+    gap: 10px;
 
+    overflow: hidden;
+    max-height: 100vh; 
+    max-width: 100vw;  
+    box-sizing: border-box; 
+    padding: 1rem;
 }
 
+/*
+---------------------------------------------------------------------------------
+*/
 
-    /* Light List Container */
-    .light_list_container{
+
+    .light_dashboard .light_container{
+        grid-row: 2/9;
+        grid-column:2/13;
+
         height: 100%;
-        width: 90%;
-        border-radius: 1rem;
-        grid-row: 2/10;
-        grid-column: 1/3;
-        backdrop-filter: blur(25px);
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        overflow: hidden;
-        gap: 1rem;
-    }
-    /*Li*/
-
-    .light_list_header{
-
-        grid-row: 1;
-        grid-column: 8/11;
-
         width: 100%;
-        margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
-        display: grid;
-        grid-template-columns: 25% 50% 25%;
-        justify-items: center;
-        align-items: center;
+        z-index: 0;
+
         background-color: transparent;
 
-        border-bottom-left-radius: 1rem ;
-        border-bottom-right-radius: 1rem ;
-    }
-        .header_transport_1{
-            height: 2.5rem;
-            width: 2.5rem;
-            border-radius: 100%;
-            border: none;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(255, 255, 255);
-        }
-            .header_transport_1 img{
-                height: 90%;
-            }
-  
-
-    .light_list{
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        flex-direction: column;
-        gap: .5rem;
-        overflow: scroll; 
-        height: 100%; 
-        width: 90%; 
-    }
-        .small_light_list{
-            display:flex;
-            flex-direction: column;
-            gap: .5rem;
-            width: 80%;
-            height: 100%;
-        }
-            .small_light_list button{
-                background-color: rgb(30,30,30);
-            }
-        .light_list button{
-            min-height: 4rem;
-            width: 100%;
-            border-radius: .75rem;
-            border: none;
-        }
-            .light_button{
-                display: flex;
-                justify-content: start;
-                align-items: center;
-      
-                justify-items: center;
-                align-items: center;
-            }
-                .img_background_off{
-                    height:3rem;
-                    width: 3rem;
-                    background-color: rgb(179, 44, 44);
-                    border-radius: 100%;
-                }
-                    .img_background_off img{
-                        filter: invert(1);
-                        position: relative;
-                        bottom: 3px;
-                    }
-                .img_background_on{
-                    height:3rem;
-                    width: 3rem;
-                    background-color: rgb(239, 239, 65);
-                    border-radius: 100%;
-                }
-                .light_button img{
-                    height: 100%;
-                }
-
-
-
-    .light_map_container{
-        backdrop-filter: blur(25px);
-        height: 100%;
-        width: 95%;
-        border-radius: 1rem;
-        grid-row: 2/10;
-        grid-column:1/11;
-
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-content: flex-start;
+        flex-wrap: wrap;
+        
+        overflow-y: scroll;
 
-  
     }
-  
-    
 
 
-    .map_1{
-        height: 160%;
-        filter: invert(1);
+/*
+--------------------------------------------------------------------------------------- zones 
+*/
+
+
+.zone_section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(25px);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.zone_title{
+    margin: 0%;
+    width: 100%;
+    color: rgb(70,70,70);
+    padding-bottom: 10px;
+    font-style: normal;
+    font-weight: 100;
+}
+    .light_wrapper{
+        width: 100%;
+        display: flex;
+        justify-content:  flex-start;
+     align-items: center;
+        gap: .4rem;
+        flex-wrap: wrap;
     }
-    .map_2{
-        height: 95%;
-        filter: invert(1);
-    }
+        .light_wrapper .light_tile{
+            height: 12rem;
+            width: 12.5rem;
+        }
+            .light_wrapper .light_info .light_name{
+             font-size: large;
+            }
+
+            .light_wrapper .light_controls .btn_circle{
+                height: 3.5rem;
+                width: 3.5rem;
+            }
+
+
