fix disapearing issue with css and image

--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -73,6 +73,9 @@
     align-items: center;
     justify-content: center;
     z-index: 1;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
 }
 .background_image img{
    
