--- a/src/assets/css/dashboard_css/Home_Dashboard.sass
+++ b/src/assets/css/dashboard_css/Home_Dashboard.sass
@@ -4,8 +4,7 @@ $dark-gray: rgb(70,70,70)
 
 
 .living_room_page
-    height: 100%
-    width: 100%
+  
 
     display: grid
     grid-template-columns: repeat(8, 1fr)
@@ -15,10 +14,12 @@ $dark-gray: rgb(70,70,70)
     gap: 10px
 
     overflow: hidden
-    max-height: 100vh 
-    max-width: 100vw  
+    height: 100vh
+    width: 100vw
     box-sizing: border-box 
     padding: 1rem
+
+    z-index: 10
 
     
 
