--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -15,6 +15,8 @@
     max-width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
+
+    z-index: 10;
 }
 
 /*
@@ -90,3 +92,14 @@
             }
 
 
+
+
+    @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+
+        .title_info{
+            font-size: x-large;    
+            bottom: 1.25rem;
+            position: relative;
+        }
+
+    }
