--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -14,6 +14,8 @@
     max-width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
+
+    z-index: 10;
 }
     .security_dashboard .title_info{
         grid-column: 2/13;
@@ -182,7 +184,7 @@
    
         
         .security_dashboard .title_info{
-            font-size: 1.75rem;
+            font-size: x-large;
             grid-column: 2/12;
             bottom: 0;
             position: relative;
