--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -76,6 +76,9 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
+    object-fit: cover;
+    overflow: hidden;
+
 }
 .background_image img{
    
