--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -1,8 +1,5 @@
 
 .light_dashboard{
-    height: 100%;
-    width: 100%;
-
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, 1fr);
@@ -11,8 +8,8 @@
     gap: 10px;
 
     overflow: hidden;
-    max-height: 100vh; 
-    max-width: 100vw;  
+    height: 100vh; 
+    width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
 
@@ -56,8 +53,8 @@
     align-items: center;
     flex-direction: column;
 
-    background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(25px);
+    background-color: rgba(70, 70, 70, 0.55);
+        backdrop-filter: blur(25px);
     padding: 10px;
     border-radius: 10px;
 }
@@ -65,10 +62,11 @@
 .zone_title{
     margin: 0%;
     width: 100%;
-    color: rgb(70,70,70);
+    color: white;
     padding-bottom: 10px;
     font-style: normal;
     font-weight: 100;
+    
 }
     .light_wrapper{
         width: 100%;
@@ -81,6 +79,9 @@
         .light_wrapper .light_tile{
             height: 12rem;
             width: 12.5rem;
+            background-color: rgb(70,70,70);
+            box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.5) , -2px -2px 5px rgba(0, 0, 0, 0.95);
+
         }
             .light_wrapper .light_info .light_name{
              font-size: large;
@@ -95,11 +96,44 @@
 
 
     @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+        .light_dashboard{
+          
+                grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
+        
+        }
 
         .title_info{
             font-size: x-large;    
             bottom: 1.25rem;
-            position: relative;
+    
         }
+
+        /*
+        ---------------------------------------------------------------------------------------- light container 
+        */
+    
+
+        .light_dashboard .light_container{
+            grid-column: 1/13;
+            grid-row: 2/8;
+         
+        }
+        .zone_title{
+            text-align: center;
+            color: white;
+        }
+        .light_wrapper{
+            justify-content: center
+
+        }
+        .light_dashboard .light_tile{
+            height: 9.5rem;
+            width: 48%;
+            background-color: rgb(70,70,70);
+        }
+
+    
+        
+
 
     }
