--- a/src/assets/css/dashboard_css/Room_Dashboard.css
+++ b/src/assets/css/dashboard_css/Room_Dashboard.css
@@ -1,43 +1,5 @@
-/*
--------------------------- top nav 
-.floor_options{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-row: 2;
-    grid-column: 2/8;
-    background-color: transparent;
-    width: 100%;
-    height: 60%;
-    gap: 1rem;
-    animation: room_selection 1000ms;
-
-}
-
-    .display_tab{
-        width: 100%;
-        height: 100%;
-        border-radius:10px;
-    }
-
-        .display_tab button{
-            border: solid 2px rgb(30,30,30);
-            box-shadow: rgb(30, 30, 30) 0px 10px 10px -10px;
-        }
-
-            .display_tab p {
-                font-size: large;
-                font-weight: bold;
-                color: rgb(30,30,30);
-            }
-
-
-*/
-
 .rooms_dashboard{
-    height: 100%;
-    width: 100%;
-
+  
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, 1fr);
@@ -46,8 +8,8 @@
     gap: 10px;
 
     overflow: hidden;
-    max-height: 100vh; 
-    max-width: 100vw;  
+    height: 100vh; 
+    width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
 
@@ -231,23 +193,19 @@
 
 
 @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+    .rooms_dashboard{
+        grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
+    }
 .rooms_dashboard .title_info{
     font-size: x-large;
     grid-column: 2/12;
-    bottom: 0;
-    position: relative;
-    bottom: 1.25rem;
 
 }
 
     .mobile_back_btn{
         display: contents;
-    
     }
-    .back_button{
-        position: relative;
-        bottom: 1.25rem;
-    }
+   
 
 
  /*
