--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -1,7 +1,5 @@
 .security_dashboard{
-    height: 100%;
-    width: 100%;
-
+ 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(8, 1fr);
@@ -10,8 +8,8 @@
     gap: 10px;
 
     overflow: hidden;
-    max-height: 100vh; 
-    max-width: 100vw;  
+    height: 100vh; 
+    width: 100vw;  
     box-sizing: border-box; 
     padding: 1rem;
 
@@ -181,14 +179,15 @@
             display: none;
         }
 
+        .security_dashboard{
+            grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
+        }
    
         
         .security_dashboard .title_info{
             font-size: x-large;
             grid-column: 2/12;
-            bottom: 0;
-            position: relative;
-            bottom: 1.25rem;
         
         }
 
