--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -625,39 +625,44 @@ body {
       */
 
       .btn_selected{
-        height: 2.25rem;
+        height: 4rem;
         width: 4rem;
-        border-radius: 1rem;
+        border-radius: 100%;
+        background-color: rgb(70, 70, 70, .95);
+
         
       }
         .btn_selected img{
-          height: 75%;
+          height: 50%;
         }
     
 
 
-
-        
-    @keyframes glow {
-      0%{
-        background-color: rgb(70, 70, 70, .5);
-        box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.25);
-       
-      } 
-      
-        
-      50% {
-        background-color: rgb(70, 70, 70, .5);
-        box-shadow: 0px 0px 5px 2px rgb(255, 255, 255);     }
-      
-      
-      100% {
-        background-color: rgb(70, 70, 70, .5);
-        box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.25);    }
-      
-      
-      }
+        @keyframes glow {
+          0%{
+            background-color: rgba(70, 70, 70, .95);
+            box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.25);
+           
+          } 
+          
+            
+          50% {
+            background-color: rgba(70, 70, 70, .95);
+            box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);     }
+          
+          
+          100% {
+            background-color: rgba(70, 70, 70, .95);
+            box-shadow: 0px 0px 3px 2px rgba(255, 255, 255, 0.25);    }
+          
+          
+          }
     
+    
+    
+
+
+ 
 
 
 
