--- a/src/assets/css/dashboard_css/Audio_Dashboard.css
+++ b/src/assets/css/dashboard_css/Audio_Dashboard.css
@@ -400,7 +400,7 @@
 
         grid-column: 1/10;
         grid-row:2/9;
-        background-color: rgba(20, 20, 20, 0.75);
+       
         backdrop-filter: blur(20px);
         width: 100%;
         height: 100%;
@@ -425,12 +425,12 @@
         height: 8.5rem;
         width: 23rem;
         display: flex;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
         border-radius: 10px;
         backdrop-filter: blur(20px);
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgb(70, 70, 70);
     }
         #active_zone{
             background-color: rgb(79, 125, 154);
@@ -559,7 +559,6 @@
             }
 
             .zone_menu{
-                background-color: rgba(0, 0, 0, 0.1);
                 display: grid;
                 border-radius: 0%;
                 padding: 0%;
