--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -16,6 +16,10 @@
     z-index: 10;
 }
 
+.mobile_nav{
+    display: none;
+}
+
 /*
 ---------------------------------------------------------------------------------
 */
@@ -46,6 +50,21 @@
 /*
 --------------------------------------------------------------------------------------- zones 
 */
+#global_lighting .btn_square_wide{
+    height: 10rem;
+    width: 15.5rem;
+    background-color: rgba(70, 70, 70, 0.55);
+    backdrop-filter: blur(25px);
+    box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
+}
+    #global_lighting .btn_square_wide p{
+        font-size: x-large;
+    }
+
+    #global_lighting #active_global{
+        background-color: rgb(62, 104, 143);
+    }
+
 
 
 .zone_section{
@@ -97,11 +116,9 @@
 
 
 
-    @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+    @media only screen and (max-device-width: 430px) and (orientation: portrait){
         .light_dashboard{
-          
                 grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 6%;
-        
         }
 
         .title_info{
@@ -109,6 +126,49 @@
             bottom: 1.25rem;
     
         }
+        #global_lighting {
+            height: 100%;
+        }
+
+        #global_lighting .btn_square_wide{
+            height: 6rem;
+            width: 10rem;
+            background-color: rgba(70, 70, 70, 0.55);
+            backdrop-filter: blur(25px);
+            box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
+        }
+        #global_lighting .btn_square_wide p{
+            font-size: large;
+        }
+
+        .light_dashboard .nav_container {
+            
+         display: none;
+        
+        }
+
+        .light_dashboard .mobile_nav{
+            display: contents;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            grid-column: 1/13;
+            grid-row: 8/9;
+
+            width: 100%;
+            height: 100%;
+
+
+            backdrop-filter: blur(25px);
+            border-radius: 20px;
+            background-color: rgb(255, 255, 255, .3250);
+
+        }
+
+
+
+        
 
         /*
         ---------------------------------------------------------------------------------------- light container 
@@ -125,7 +185,7 @@
             color: white;
         }
         .light_wrapper{
-            justify-content: center
+            justify-content: center;
 
         }
         .light_dashboard .light_tile{
@@ -139,3 +199,4 @@
 
 
     }
+
