--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -338,15 +338,13 @@ body {
    
   #light_btn_off{
     background-color: rgb(204, 80, 80);
-    pointer-events: none;
-    cursor: not-allowed; /* For devices with a cursor */
+   
   }     
     
   #light_btn_on{
     background-color: rgb(252 , 234, 187);
 
-    pointer-events: none;
-    cursor: not-allowed; /* For devices with a cursor */
+   
   }
   #light_btn_on img{
     filter: invert(0);
@@ -506,8 +504,28 @@ body {
 
 
 #card_glow{
-animation: light-glow 6s infinite alternate;
 }
+
+
+        @keyframes glow1 {
+          0%{
+       
+    
+            box-shadow: inset 0px 0px 3px 2px rgba(255, 255, 255, 0.25), -5px -5px 15px #5a5656, 5px 5px 15px #ffffff8f;
+           
+          } 
+          
+            
+          50% {
+            box-shadow:inset  0px 0px 30px 5px rgb(231, 223, 154), -5px -5px 15px #5a5656, 5px 5px 15px #ffffff8f;     }
+          
+          
+          100% {
+            box-shadow:inset 0px 0px 3px 2px rgba(255, 255, 255, 0.25), -5px -5px 15px #5a5656, 5px 5px 15px #ffffff8f;    }
+          
+          
+          }
+    
 
 
 
