--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -20,6 +20,10 @@
     display: none;
 }
 
+.light_dashboard .light_tile{
+    animation: none;
+}
+
 /*
 ---------------------------------------------------------------------------------
 */
