--- a/src/assets/css/page_css/genericRoom.css
+++ b/src/assets/css/page_css/genericRoom.css
@@ -64,7 +64,7 @@
 
 .room_sources_container{
     grid-column: 1/10;
-    grid-row: 2/7;
+    grid-row: 1/8;
 
     background-color: transparent;
 
@@ -75,6 +75,8 @@
     flex-wrap: wrap;
 
     gap: 10px;
+    overflow: hidden;
+    height: 100%;
 
     }
 
@@ -95,7 +97,7 @@
     z-index: 1;
 
     position: relative;
-    animation: fade 1000ms;
+    animation: left-load 1s;
 
     overflow: hidden;
 }
@@ -466,6 +468,7 @@
     gap: 10px;
     width: 100%;
     height: 100%;
+    overflow: hidden;
   
 }
 /*
@@ -475,17 +478,20 @@
 .light_tile{
     height: 15rem;
     width: 15rem;
-    background-color: rgb(70,70,70);
+    background-color: rgb(70,70,70,.75);
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
     border-radius: 5px;
     gap: 2rem;
     backdrop-filter: blur(25px);
     box-shadow: 
-    -5px -5px 15px #5a5656, 
-    5px 5px 15px #ffffff8f;
+    -3px -3px 5px #5a5656, 
+    3px 3px 10px #ffffff8f;
+    z-index: 1;
+
+    animation: left-load 1s;
 
 }
     .light_tile .light_info{
@@ -511,7 +517,7 @@
         padding: .5rem ;
         border-radius: 10px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
     }
 
@@ -525,7 +531,7 @@
     }
     .light_controls{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         width: 80%;
     }
@@ -596,12 +602,14 @@
     height: 100%;
     width: 100%;
    
-    z-index: 200;
+    z-index: 500;
     position: absolute;
 
+    right: 1px;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
  
  
    
@@ -611,7 +619,7 @@
         position: absolute;
         top: 0;
         bottom: 0;
-        width: 105%;
+        width: 100%;
         height: 100%;
     
         z-index: 0;
@@ -624,7 +632,7 @@
         display: none;
         }
             .power_menu{
-                background-color: rgb(70,70,70);
+                background-color: rgb(36, 36, 36);
                 position: relative;
                 z-index: 100;
 
@@ -753,7 +761,62 @@
     
     
     }
+
+
+    /*
+    ------------------------------------------- Power menu 
+    */
     
+    .power_menu{
+    
+        background-color: rgb(2, 2, 2);
+        position: relative;
+        z-index: 100;
+    
+
+        height: 50%;
+        width: 90%;
+
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+
+        border-radius: 20px;
+
+        animation: power-menu-load 1000ms;
+        overflow: hidden;
+    }
+
+    .power_menu_overlay {
+        grid-column: 1 / 13;
+        grid-row: 1 / 9;
+        height: 120%;
+        width: 110%;
+        z-index: 200;
+        position: relative;
+        right: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .power_menu_overlay::before {
+        content: " ";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        backdrop-filter: blur(20px);
+    }
+       
+        .power_menu_text{
+            width: 75%;
+            font-size: 2.25rem;
+            text-align: center;
+        }
   
         /*
         ---------------------------------------------------------------------------------------------------------- Nav
@@ -791,6 +854,8 @@
         grid-template-columns: repeat(2,1fr);
         position: relative;
         top: 5px;
+        overflow: visible;
+     
     }
         .source_card{
             height:155px;
@@ -838,6 +903,10 @@
               height: 160px;
               width: 176px;
                 gap: 0;
+
+                justify-content: space-evenly;
+
+
             }
                 .light_tile .light_info{
                     width:95%
