--- a/src/assets/css/dashboard_css/Light_Dashboard.css
+++ b/src/assets/css/dashboard_css/Light_Dashboard.css
@@ -42,12 +42,16 @@
         display: flex;
         justify-content: center;
         align-content: flex-start;
+
+        align-items: center;
         flex-wrap: wrap;
         
         overflow-y: scroll;
         animation: room_selection 1000ms;
+    }
 
-
+    .light_dashboard .light_container .light_wrapper{
+        justify-content: center;
     }
 
 
@@ -56,7 +60,7 @@
 */
 #global_lighting .btn_square_wide{
     height: 10rem;
-    width: 15.5rem;
+    width: 15rem;
     background-color: rgba(70, 70, 70, 0.55);
     backdrop-filter: blur(25px);
     box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
