--- a/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
+++ b/src/assets/css/dashboard_css/PoolSpa_Dashboard.css
@@ -34,11 +34,14 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
 
-        
-        
-        
-
+        backdrop-filter: blur(0px);
     }
+
+    .pool_spa_dashboard .nav_container:before{
+        background-color: transparent;
+    }
+
+
 
 
 
@@ -50,11 +53,11 @@
 
         .pool_container{
             grid-column: 2/6;
-            grid-row: 2/8;
+              grid-row: 2/9;
             background-color: rgba(70, 70, 70, 0.5);
             backdrop-filter: blur(15px);
             width: 100%;
-            height: 95%;
+            height: 75%;
 
             display: flex;
             justify-content: space-evenly;
@@ -68,18 +71,38 @@
 
     /*
     --------------------------------------------------- button_container
+
+
     */
     .button_container{
         grid-column: 6/8;
-        grid-row: 2/8;
+          grid-row: 2/9;
         width: 100%;
-        height: 100%;
+        height: 80%;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
         animation: controller-load 1000ms
+        
     }
+
+        .air_temp_wrapper{
+            z-index: 10;
+            width: 10rem;
+            height: 5rem;
+            background-color: rgb(70, 70, 70, .5);
+            backdrop-filter: blur(15px);
+            border-radius: 45px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
+            .air_temp_wrapper p{
+                z-index: 10
+            }
         .pool_spa_dashboard .btn_square_wide{
             background-color: rgb(70,70,70);
             box-shadow: inset 1px 1px 2px white, inset -1px -1px 2px whitesmoke, 5px 6px 15px black;
@@ -105,11 +128,11 @@
 
     .spa_container{
         grid-column: 8/12;
-        grid-row: 2/8;
+          grid-row: 2/9;
         background-color: rgba(70, 70, 70, 0.5);
         backdrop-filter: blur(15px);
         width: 100%;
-        height: 95%;
+        height: 75%;
 
         display: flex;
         justify-content: space-evenly;
@@ -209,13 +232,48 @@
             }
 
 
+    /*
+    -------------------------------------- lock out mode 
+    */
 
+
+    .lock_out_mode{
+        grid-column: 1/13;
+        grid-row: 2/9;
+        z-index: 30;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        background-color: rgb(70,70,70,0.5);
+        backdrop-filter: blur(5px);
+        border-radius: 20px;
+    }
+        .lock_out_mode h1{
+            width: 70%;
+            height: 6rem;
+           background-color: rgb(40,40,40);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            border-radius: 40px;
+            color: red;
+        }
 
 
 
 
 
         @media only screen and (max-device-width: 430px) and (max-device-width: 837px) and (orientation: portrait){
+
+            .air_temp_wrapper{
+                display: none;
+            }
+           
+
            
             .pool_spa_dashboard .nav_container{
                 display: none;
