--- a/src/assets/css/dashboard_css/Security_Dashboard.css
+++ b/src/assets/css/dashboard_css/Security_Dashboard.css
@@ -18,16 +18,18 @@
     animation: controller-load 1s;
 }
     .security_dashboard .title_info{
-        grid-column: 2/13;
+        grid-column: 2/12;
     }
 
 
 
+
+
 .security_keypad_container{
-    grid-column: 5/10;
+    grid-column: 4/10;
     grid-row: 3/9;
     height: 100%;
-    width: 90%;
+    width: 80%;
 
     
     display: flex;
@@ -132,7 +134,7 @@
 
 
     .control_container{
-        grid-column:3/5;
+        grid-column:3/4;
         grid-row: 3/9;
         display: flex;
         justify-content: space-evenly;
@@ -153,12 +155,61 @@
     .security_dashboard .light_indicator .btn_square_wide{
         background-color: gray;
         font-size: larger;
-        height: 2.75rem;
+        height: 6rem;
+        width: 6rem;
+        border-radius: 100%;
         pointer-events: none;
         cursor: not-allowed;
+        box-shadow: none;
 
     }
+
+    .light_indicator_container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 20%; 
+        gap: 10px;   
+    }
+    .light_indicator_container p {
+        font-size: larger;
+        color: black;
+        font-weight: bold;
+    }
     
+
+    .security_dashboard .light_indicator #active_btn_ready{
+        background-color: rgb(8, 179, 8);
+        height: 2rem;
+        width: 2rem;
+        border-radius: 100%;
+        border: solid 2px rgb(255, 255, 255)
+     }
+
+     .security_dashboard .light_indicator #active_btn_stay{
+        background-color: rgb(179, 176, 8);
+        height: 2rem;
+        width: 2rem;
+        border-radius: 100%;
+        border: solid 2px rgb(255, 255, 255)
+    }
+
+     .security_dashboard .light_indicator #active_btn_armed{
+        background-color: rgb(213, 10, 10);
+        height: 2rem;
+        width: 2rem;
+        border-radius: 100%;
+        border: solid 2px rgb(255, 255, 255)
+     }
+
+
+     .security_dashboard .light_indicator #not_active_ind{
+       
+        height: 2rem;
+        width: 2rem;
+        border-radius: 100%;
+        border: solid 2px black
+     }
    
 
  /*
@@ -169,6 +220,11 @@
         grid-row: 1/2;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
+        backdrop-filter: blur(0px);
+    }
+
+    .security_dashboard .nav_container:before{
+        background-color: transparent;
     }
 
 
@@ -180,7 +236,7 @@
     */
 
     .light_indicator{
-        grid-column: 5/10;
+        grid-column: 4/10;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -191,8 +247,71 @@
 
 
 
+    /*
+    -------------------------------------- security zone 
+    */
+    .security_zones_title{
+        grid-column: 10/13;
+        grid-row: 2/3;
+        text-align: center;
+        border-bottom: solid 1px black;
+        width: 70%;
+
+    }
+    .security_zones_title h2{
+        color: black;
+
+    }
+    .security_zones{
+        overflow-y: scroll;
+        z-index: 10;
+        grid-column: 10/13;
+        grid-row: 3/9;
+        width: 100%;
+        height: 100%;
+    
+        display: flex;
+        justify-content: center;
+        align-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+        overflow: scroll;
+        flex-wrap: wrap;
+        
+      
+
+        gap: .5rem;
+    }   
+    
+    .security_zone_card{
+     
+     
+        height: 5rem;
+        width: 100%;
+        border-radius: 4rem;
+   
+        background-color: rgb(70,70,70);
+      
+
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      
+    
+
+    }
+
+
     
     @media only screen and (max-device-width: 430px) and (orientation: portrait){
+
+        .security_zones, .security_zones_title{
+            display: none;
+        }
+
+        .light_indicator_container{
+            width: 33%;
+        }
        
         .security_dashboard .nav_container{
             display: none;
@@ -201,6 +320,10 @@
         .security_dashboard{
             grid-template-rows: 6% 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
             overflow: hidden;
+
+        }
+
+        .light_indicator{
 
         }
    
